--- a/app/views/carts/_cart.html.slim
+++ b/app/views/carts/_cart.html.slim
@@ -1,6 +1,6 @@
 - @title = "Shopping Cart | Tokobuku"
 - unless cart.line_items.empty?
-  col-lg-12.col-md-12.col-sm-12
+  .col-lg-12.col-md-12.col-sm-12
     h4 Your Cart
     table.table.table-striped
       = render(cart.line_items)
@@ -10,7 +10,10 @@
             | Total: Rp 
             = number_with_delimiter(number_with_precision(@cart.total_price, precision: 0), delimiter:".")
     
-  col-lg-12.col-md-12.col-sm-12    
-    = button_to 'Empty Cart', @cart, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs'
+  .col-lg-12.col-md-12.col-sm-12
+    .col-lg-3.col-md-3.col-sm-3
+      = button_to 'Empty Cart', @cart, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs'
+    .col-lg-3.col-md-3.col-sm-3
+      = button_to 'Checkout', new_order_path, method: :get, class: 'btn btn-success btn-xs'
 - else
   h4 Your cart is currently empty.
